The css fix for first image overflowing. //forgot to put it on github

--- a/style.css
+++ b/style.css
@@ -8,12 +8,18 @@ body,html{
     color: white;
 }
 
+body{
+    display: flex;
+    flex-direction: column;
+}
+
 #list{
-    float: left;
+    display: flex;
+    flex-wrap: wrap;
 }
 
 #holder{
-    padding-top: 200px;
+    padding-top: 50px;
     background-color: rgb(19, 19, 19);
 }
 
@@ -80,8 +86,9 @@ body,html{
 }
 
 img{
-    padding:0;
     display: block;
+    max-width: 100%;
+    height: auto;
 }
 
 h1{
